# ogsql-parser

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.sisyphus/plans/: 2026-04-13-xml-functions.md
GaussDB-2.23.07.210/: sql_plan_hints.json
GaussDB-2.23.07.210/sql/: all_sql.sql  error-sp.sql  error.sql  errsp1.sql  half-sql.sql  index.json
GaussDB-2.23.07.210/term/: A.json  ABO优化器.json  AI Watchdog.json  AI.json  AI4DB_ 数据库自治运维.json  AI能力.json  API参考.json  API（推荐）.json  Anomaly detection.json  Astore存储引擎.json  B.json  BMS入云.json  BMS入云完成后配置.json  BMS实例发放前检查.json  BMS最佳实践.json  BMS裸金属网络设计.json  C.json  CM相关参数.json  CM配置参数介绍.json  Cache_IO.json  Cluster Diagnosis.json  Comm.json  Configuration.json  D.json  DATABASE LINK.json  DB4AI Schema.json  DB4AI_ 数据库驱动AI.json  DBA智能运维.json  DBE_PERF Schema.json  DBE_PLDEBUGGER Schema.json  DBE_PLDEVELOPER.json  DBE_SQL_UTIL Schema.json  DBMind_ 数据库自治运维.json  DBMind实例管理.json  DBMind实例说明.json  DBMind模式说明.json  DBMind的AI子功能.json  DBMind的支持组件.json  DBMind管理.json  DBSplatform安装指南.json  (+417 more)
GaussDB-2.23.07.210/云数据库 GaussDB 2.23.07.210 产品文档 (for 华为云Stack 8.3.0) 04/: 001_file_1.txt  002_DBSplatform.txt  003_file_3.txt  004_file_4.txt  005_file_5.txt  006_file_6.txt  007_file_7.txt  008_file_8.txt  009_HCC Turnkey.txt  010_file_10.txt  011_file_11.txt  012_HCC Turnkey.txt  013_GaussDB.txt  014_file_14.txt  015_file_15.txt  016_file_16.txt  017_file_17.txt  018_GaussDB(OBS.txt  019_file_19.txt  020_file_20.txt  021_file_21.txt  022_file_22.txt  023_3.0.txt  024_VDC.txt  025_file_25.txt  027_file_27.txt  028_CSL.txt  029_DNS_NTP.txt  030_BMS.txt  031_AZAZ.txt  034_provisionobs-om.txt  035_file_35.txt  037_HCC Turnkey.txt  038_RAID.txt  039_file_39.txt  040_file_40.txt  041_HCC Turnkey AZ.txt  043_file_43.txt  044_file_44.txt  045_HCC Turnkey.txt  (+5384 more)
docs/: BEST-PRATICE.md  CONTRIBUTING.md  ast-json-reference.md  crate-guide.md  ecosystem-rule-mapping.md  gaussdb-sql-features.md  ogsql-parser-visitor-enhancement-spec-v2.md  ogsql-parser-visitor-enhancement-spec.md  user-guide.md
docs/plans/: 2026-04-01-phase2-core-dml.md  2026-04-01-phase3b-ddl-core.md  2026-04-03-p4-b-c-quality-extensions.md  2026-04-04-p5-parser-coverage.md  2026-04-05-plpgsql-support.md  2026-04-08-package-body-parsing.md  2026-04-10-ast-reverse-engineering.md  2026-04-10-p3-p4-p5-quality.md  2026-04-11-dynamic-sql-variable-tracing.md  2026-04-11-execute-immediate-content-reparse.md  2026-04-11-execute-immediate-dynamic-sql.md  2026-04-11-ibatis-xml-parsing.md  2026-04-11-java-sql-extraction.md  2026-04-12-gaussdb-syntax-coverage.md  2026-04-13-gaussdb-p0-p1-implementation.md  2026-04-13-parser-coverage-improvement.md  2026-04-14-gaussdb-syntax-coverage-audit.md  2026-04-14-hint-function-validation.md  2026-04-14-remaining-errors-round3.md  2026-04-15-alter-table-batch12.md  2026-04-15-extra-sql-methods.md  2026-04-15-non-ddl-dml-gap-analysis.md  2026-04-16-gaussdb-syntax-gap-analysis.md  2026-04-16-p0-execution-plan.md  2026-04-17-cursor-complete-support.md  2026-04-19-half-sql-error-fixes.md  2026-04-19-keyword-expression-fixes.md  2026-04-25-pl-variable-resolution.md  2026-04-25-variable-resolution-phase2.md  2026-04-26-fix-plsql-parser-errors.md  2026-04-26-token-level-formatter.md  2026-04-27-parameterized-sql-output.md  2026-04-28-ast-semantic-enhancements.md  2026-04-28-oracle-package-function-domains.md  2026-05-02-mcp-server.md  2026-05-02-mybatis-tokenizer-support.md  2026-05-02-token-formatter-enhancement.md  2026-05-03-ibatis-xml-optimization.md  2026-05-07-cross-method-jdbc-param-inference.md  2026-05-07-cursor-attribute-ast.md  (+13 more)
docs/reports/: ADDENDUM.md  AST_EQUIV_MBP_ADDENDUM.md  JSQLPARSER_ADDENDUM.md  README.md  index.html
examples/: regression.rs  schema-with-indexes.json  test_issues.rs  test_loc.rs
scripts/: verify_gaussdb_functions.sql
src/: formatter.rs  lib.rs  token_formatter.rs
src/analyzer/: mod.rs  return_cursor.rs  schema.rs  tests.rs  validate.rs
src/ast/: ident.rs  mod.rs  plpgsql.rs  visitor.rs  visitor_tests.rs
src/formatter/: mod.rs  plpgsql.rs
src/ibatis/: error.rs  expand.rs  flatten.rs  java_resolve.rs  mod.rs  optimize.rs  parser.rs  resolver.rs  tests.rs  types.rs  util.rs
src/java/: annotation.rs  constant.rs  dto_fields.rs  error.rs  extract.rs  heuristics.rs  mapper_interface.rs  method_call.rs  mod.rs  string_decode.rs  tests.rs  tests_diagnostic.rs  types.rs  variable.rs
src/linter/: mod.rs  rules_caution.rs  rules_performance.rs  structured.rs  (+4 more)
testcases/: Dynamic_mapper.xml  GaussDBDynamicSQLAdvanced.java  JavaVarRow1.java
tests/: error_handling.rs  int_extract_sql.rs  int_parser.rs  multi_statement.rs  parse_xml.rs  plpgsql.rs  print_ast_test.rs  quoted_identifier_roundtrip.rs  regress.rs  regression_extract_sql.rs  regression_parser.rs  roundtrip.rs  validate_java.rs  validate_xml.rs
(+1034 files in other folders)
