[package]
name = "ogsql-parser"
version = "0.1.0"
edition = "2021"
description = "A SQL parser for openGauss/GaussDB written in Rust"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "2"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Binary-only deps (feature-gated)
clap = { version = "4", features = ["derive"], optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[dev-dependencies]
walkdir = "2"

[features]
default = ["cli"]
cli = ["dep:clap"]
serve = ["cli", "dep:axum", "dep:tokio", "dep:tower-http"]
tui = ["cli", "dep:ratatui", "dep:crossterm"]
full = ["cli", "serve", "tui"]

[[bin]]
name = "ogsql"
path = "src/bin/ogsql.rs"
required-features = ["cli"]
