[package]
name = "ogsql-parser"
version = "0.1.0"
edition = "2021"
description = "A SQL parser for openGauss/GaussDB written in Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["sql", "parser", "opengauss", "gaussdb", "database"]
categories = ["database", "parser-implementations"]
repository = "https://github.com/User/ogsql-parser"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
thiserror = "2"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Binary-only deps (feature-gated)
clap = { version = "4", features = ["derive"], optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
utoipa = { version = "5", optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
quick-xml = { version = "0.39", optional = true }
tree-sitter = { version = "0.24", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
walkdir = { version = "2", optional = true }

[dev-dependencies]

[features]
default = []
cli = ["dep:clap"]
ibatis = ["dep:quick-xml", "dep:walkdir"]
java = ["dep:tree-sitter", "dep:tree-sitter-java", "dep:walkdir"]
serve = ["cli", "dep:axum", "dep:tokio", "dep:tower-http", "dep:utoipa"]
tui = ["cli", "dep:ratatui", "dep:crossterm"]
full = ["cli", "ibatis", "java", "serve", "tui"]

[[bin]]
name = "ogsql"
path = "src/bin/ogsql.rs"
required-features = ["cli"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
